<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/card_margin"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="70dp"
                android:background="@drawable/cheese_3"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="8dp"
                android:background="@drawable/button_bg"
                android:textColor="#FFFFFF"
                android:text="编辑"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_style"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/color"
                android:layout_marginTop="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_color"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/product_size"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/product_count"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>