<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:padding="16dp"
              tools:context="com.jeegoo.o2o.tehuiduo.CreateProductStyleFragment">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/productStyleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_style_name"
        android:singleLine="true"
        android:textSize="20sp"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/product_style_message"/>
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/productStyleCountEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/product_style_count"
        android:singleLine="true"
        android:textSize="20sp"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/product_style_count"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="16dp">
        <Spinner
            android:id="@+id/colorSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ></Spinner>
        <ImageButton
            android:id="@+id/addColorImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_style_button_bg"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="16dp">
        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            ></Spinner>
        <ImageButton
            android:id="@+id/addSizeImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_style_button_bg"
            android:layout_gravity="center_vertical"/>
    </LinearLayout>
</LinearLayout>

</LinearLayout>
